# SLAMDrone

./: .gitmodules  Docker_script.sh  Dockerfile  Git_install.sh  Script_Armada.sh  move_base_transform_save.cpp  move_base_transform_save.h  tutoriel_slam.txt
Dev_code_version_SITL/ros_catkin_ws/: armada_out.xacro  component_out.urdf
Dev_code_version_SITL/ros_catkin_ws/src/simple_navigation_goals/: CMakeLists.txt
Moveit_quad/: CMakeLists.txt  package.xml
Moveit_quad/config/: armada.srdf  joint_limits.yaml  sensors.yaml
Moveit_quad/launch/: armada_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/launch/: armada_spawn.launch
ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/urdf/: armada.xacro  armada_base.xacro
armada3/Dev_code_version_SITL/ros_catkin_ws/devel/: .catkin  (+3 more)
armada3/Dev_code_version_SITL/ros_catkin_ws/src/simple_navigation_goals/: CMakeLists.txt
armada3/Dev_code_version_SITL/ros_catkin_ws/src/simple_navigation_goals/action/: SetPoint.action
armada3/Dev_code_version_SITL/ros_catkin_ws/src/simple_navigation_goals/include/: simple_navigation_goals.h
armada3/Dev_code_version_SITL/ros_catkin_ws/src/simple_navigation_goals/src/: simple_navigation_goals.cpp
(+482 files in other folders)
